.metadata/.plugins/org.eclipse.cdt.ui/empty.build.log
11:23:15 **** Incremental Build of configuration GNU ARM v10.2.1 - Debug for project empty ****
make -j12 all 
Building file: ../main.c
Invoking: GNU ARM C Compiler
arm-none-eabi-gcc -g3 -gdwarf-2 -mcpu=cortex-m4 -mthumb -std=c99 '-DDEBUG_EFM=1' '-DEFR32FG14P233F256GM48=1' '-DSL_BOARD_NAME="BRD4259A"' '-DSL_BOARD_REV="A01"' '-DSL_COMPONENT_CATALOG_PRESENT=1' -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\config" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\autogen" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\Device\SiliconLabs\EFR32FG14P\Include" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\hardware\board\inc" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\CMSIS\Include" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\service\device_init\inc" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\emlib\inc" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\common\inc" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\hardware\driver\mx25_flash_shutdown\inc\sl_mx25_flash_shutdown_usart" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\common\toolchain\inc" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\service\system\inc" -I"C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\service\udelay\inc" -Os -Wall -Wextra -fno-builtin -ffunction-sections -fdata-sections -imacrossl_gcc_preinclude.h -mfpu=fpv4-sp-d16 -mfloat-abi=softfp -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
../main.c: In function 'LDMA_IRQHandler':
../main.c:86:51: error: invalid operands to binary - (have 'uint32_t' {aka 'long unsigned int'} and 'volatile uint32_t *' {aka 'volatile long unsigned int *'})
   86 |   txDestination = *active_buffer + *active_buffer - buffer_address ;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |                                  |
      |                                  uint32_t {aka long unsigned int}
../main.c: In function 'initLdma':
../main.c:169:17: warning: assignment to 'uint32_t *' {aka 'long unsigned int *'} from incompatible pointer type 'int *' [-Wincompatible-pointer-types]
  169 |   active_buffer = (int*)(LDMA_BASE + 0x094);
      |                 ^
../main.c:172:44: warning: passing argument 3 of 'LDMA_StartTransfer' from incompatible pointer type [-Wincompatible-pointer-types]
  172 |   LDMA_StartTransfer(LDMA_CHANNEL, &trans, &description);
      |                                            ^~~~~~~~~~~~
      |                                            |
      |                                            LDMA_Descriptor_t (*)[2]
In file included from ../main.c:31:
C:\Users\Co-op Shaheeer R\SimplicityStudio\v5_workspace\empty\gecko_sdk_4.0.0\platform\emlib\inc/em_ldma.h:2636:51: note: expected 'const LDMA_Descriptor_t *' but argument is of type 'LDMA_Descriptor_t (*)[2]'
 2636 |                         const LDMA_Descriptor_t  *descriptor);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
../main.c: In function 'initOpamp':
../main.c:328:3: warning: "/*" within comment [-Wcomment]
  328 |   /*
      |    
make: *** [subdir.mk:30: main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

11:23:15 Build Failed. 2 errors, 3 warnings. (took 412ms)

